Fixed dropdown alignment on locale change bug

--- a/todo-list-client/src/components/shared/header/Header.module.scss
+++ b/todo-list-client/src/components/shared/header/Header.module.scss
@@ -118,3 +118,10 @@
     }
   }
 }
+
+[dir='rtl'] {
+  .dropdown {
+    right: auto !important;
+    left: 0 !important;
+  }
+}
